# factorlab

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
notebooks/: Untitled.ipynb  breakout_screener.ipynb  carry_factor_analysis.ipynb  trend_factor_analysis.ipynb
src/factorlab/: __init__.py  data_viz.py  factor_analysis.py  param_grid_search.py  performance.py  time_series_analysis.py  transform.py  trend.py  utils.py  value.py
src/factorlab/analysis/: param_grid_search.py
src/factorlab/analytics/: metrics.py  performance.py
src/factorlab/backtesting/: backtester.py
src/factorlab/core/: base_transform.py  pipeline.py  window_outputs.py  wrappers.py
src/factorlab/cost_model/: base.py  fixed.py
src/factorlab/data_viz/: data_viz.py  plot.py
src/factorlab/engine/: backtester.py
src/factorlab/execution/: rebalancer.py
src/factorlab/factors/: base.py  quality.py  trend.py  value.py
src/factorlab/feature_analysis/: factor_analysis.py  factor_models.py  param_grid_search.py  performance.py  supervised_learning.py  time_series_analysis.py
src/factorlab/feature_engineering/: target.py  transform.py  transformations.py
src/factorlab/feature_selection/: feature_selection.py
src/factorlab/features/: base.py  betas.py  ratios.py  residuals.py
src/factorlab/forecasting/: sklearn_wrapper.py  supervised_learning.py  time_series_analysis.py  unsupervised_learning.py
src/factorlab/portfolio/: __init__.py  market_returns.py
src/factorlab/portfolio_opt/: base.py  equal_weighted.py  inverse_vol.py  (+6 more)
tests/: test_carry.py  test_clustering.py  test_factor_models.py  test_factorlab.py  test_feature_selection.py  test_metrics.py  test_mvo.py  test_naive.py  test_performance.py  test_portfolio_optimization.py  test_portfolio_sort.py  test_return_estimators.py  test_risk_estimators.py  test_signal.py  test_size.py  test_supervised_learning.py  test_target.py  test_time_series_analysis.py  test_transformations.py  test_trend.py  test_unsupervised_learning.py  test_value.py
tests/transformations/: test_discretization.py  test_dispersion.py  test_math.py  test_moments.py  test_normalization.py  test_price.py  test_ranking.py  test_returns.py  test_signals.py  test_smoothing.py  test_unsupervised_learning.py
(+147 files in other folders)
