[tool.poetry]
name = "factorlab"
version = "0.1.0"
description = "python library which enables the transformation of raw data into informative alpha and risk factors used in the investment algorithm development process"
authors = ["Systamental"]
license = "Apache License 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
numpy = ">=1.23.3"
pandas = ">=1.5.0"
matplotlib = ">=3.6.0"
scipy = {version = "^1.9.1", python = ">=3.9, <3.12"}
sklearn = "^0.0"
statsmodels = "^0.13.2"
seaborn = "^0.12.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
