[tool.poetry]
name = "factorlab"
version = "0.1.0"
description = "Python library which enables the discovery and analysis of alpha and risk factors used in the investment algorithm development process"
authors = ["Systamental"]
license = "Apache License 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
numpy = ">=1.23.3"
pandas = ">=1.5.0"
matplotlib = ">=3.6.0"
scipy = {version = "^1.9.1", python = ">=3.9, <3.12"}
sklearn = "^0.0"
statsmodels = "^0.13.2"
seaborn = "^0.12.1"
plotly = "^5.11.0"
openpyxl = "^3.0.10"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
